add-opens args to startup.bat